# roverdb

./: Cargo.toml  README.md
examples/client/: Cargo.toml
examples/client/src/: lib.rs
src/: Cargo.toml
src/core/: Cargo.toml
src/core/src/: constants.rs  lib.rs  server.rs  types.rs
src/core/src/utility/: mod.rs
src/core/src/utils/: bincode.rs
src/engine/: Cargo.toml
src/engine/src/: constants.rs  lib.rs  main.rs
src/engine/src/database/: binary.rs  builder.rs  builder.rs~  database.rs  errors.rs  mod.rs  tests.rs
src/engine/src/server/: error.rs  listener.rs  mod.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/server/: constants.rs  error.rs  listener.rs
