[package]
name = "client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Libs
rover_core = { path = "../../src/core" }

# -- Futures
tokio = { version = "1.35", features = ["full"] }

# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# -- Error handling
anyhow = "1.0"
thiserror = "1.0"

# -- CLI / Logging
clap = "4.4"
indicatif = "0.17"
tracing = "0.1"
env_logger = "0.10"
log = "0.4.20"