[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
rover_core = { path = "../core" }

thiserror = "1.0"
clap = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
sha2 = "0.10"

[dev-dependencies]
env_logger = "0.11"